--- a/Form Validator/style.css
+++ b/Form Validator/style.css
@@ -15,14 +15,14 @@ body {
   display: grid;
   place-items: center;
   min-height: 100vh;
-  background-color: #eee;
+  background-color: #212121;
   font-family: "Open Sans", sans-serif;
 }
 
 .container {
-  background-color: #fff;
+  background: rgba(24, 20, 20, 0.987);
   border-radius: 12px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
   width: 400px;
 }
 
@@ -31,6 +31,7 @@ body {
 }
 
 h2 {
+  color: #fff;
   text-align: center;
   margin: 0 0 20px;
 }
@@ -42,18 +43,24 @@ h2 {
 }
 
 .form-control label {
-  color: #777;
+  color: #fff;
   display: block;
   margin-bottom: 6px;
+  pointer-events: none;
+  transition: 0.5s;
 }
 
 .form-control input {
   display: block;
-  border: 2px solid #f0f0f0;
+  border: none;
+  border-bottom: 1px solid #fff;
+  outline: none;
+  background: transparent;
   border-radius: 4px;
   width: 100%;
   font-size: 14px;
   padding: 10px;
+  color: #fff;
 }
 
 .form-control input:focus {
@@ -81,15 +88,49 @@ h2 {
   visibility: visible;
 }
 
-.form button {
-  cursor: pointer;
-  margin-top: 20px;
+.container form a {
+  position: relative;
+  display: inline-block;
+  padding: 10px 20px;
+  color: #ffffff;
   font-size: 16px;
+  text-decoration: none;
+  text-transform: uppercase;
+  overflow: hidden;
+  transition: 0.5s;
+  margin-top: 40px;
+  letter-spacing: 4px;
+}
+
+.container a:hover {
+  background: #03f40f;
   color: #fff;
-  border: 2px solid #3498db;
-  background-color: #3498db;
+  border-radius: 5px;
+  box-shadow: 0 0 5px #03f40f, 0 0 25px #03f40f, 0 0 50px #03f40f,
+    0 0 100px #03f40f;
+}
+
+.container a span {
+  position: absolute;
   display: block;
+}
+
+@keyframes btn-anim1 {
+  0% {
+    left: -100%;
+  }
+
+  50%,
+  100% {
+    left: 100%;
+  }
+}
+
+.container a span:nth-child(1) {
+  bottom: 2px;
+  left: -100%;
   width: 100%;
-  border-radius: 4px;
-  padding: 10px;
+  height: 2px;
+  background: linear-gradient(90deg, transparent, #03f40f);
+  animation: btn-anim1 2s linear infinite;
 }
