--- a/Form Validator/style.css
+++ b/Form Validator/style.css
@@ -87,18 +87,14 @@ h2 {
 .form-control.error small {
   visibility: visible;
 }
-
-button {
+.form button {
   appearance: none;
   background-color: transparent;
   border: 0.125em solid #1a1a1a;
   border-radius: 0.9375em;
-  box-sizing: border-box;
   color: #eee;
   cursor: pointer;
   display: inline-block;
-  font-family: Roobert, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica,
-    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 16px;
   font-weight: 600;
   line-height: normal;
@@ -109,26 +105,17 @@ button {
   padding: 1em 2.3em;
   text-align: center;
   text-decoration: none;
-  transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  will-change: transform;
   width: 100%;
 }
 
-button:disabled {
-  pointer-events: none;
-}
-
-button:hover {
+.form button:hover {
   color: #fff;
   background-color: #1a1a1a;
   box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
   transform: translateY(-2px);
 }
 
-button:active {
+.form button:active {
   box-shadow: none;
   transform: translateY(0);
 }
